<resources>
    <string name="app_name">BridgeCom</string>

    <string name="sing_in_button">Sing In</string>
    <string name="sing_up_button">Sing Up</string>
    <string name="sing_in_content">Sing In\nCONTENT</string>
    <string name="sing_up_content">Sing Up\nCONTENT</string>
    <string name="title_activity_login">Sign In</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="prompt_password_confirm">Confirm Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_up_short">Sign up</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_register">Sign Up</string>
    <string name="title_activity_main">Bridge Com</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_inbox">Inbox</string>
    <string name="action_my_chats">My Chats</string>
    <string name="action_create_chat">New Chat</string>
    <string name="action_attach_new_account">Attach Account</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <string name="action_global_settings">Global Settings</string>
    <string name="action_channels_setting">Channel Setting</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data and sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="switch_autorun">Autorun</string>
    <string name="switch_tips">Tips</string>
    <string name="switch_autoupdate">Autoupdate</string>
    <string name="action_change_password">Change Password</string>
    <string name="textview_notification_type">Notification</string>
    <string name="textview_melody">Melody</string>
    <string name="action_reset_settings">Reset Settings</string>
    <string name="action_remove_account">Deactivate Account</string>
    <string name="textview_languages">Language</string>
    <string name="old_password">Old Password</string>
    <string name="new_account_password">New Password</string>
    <string name="confirm_password">Confirm New Password</string>
    <string name="action_save_password">Save</string>
    <string name="reset_system_settings">Reset Application Settings?</string>
    <string name="no_button">No</string>
    <string name="yes_button">Yes</string>
    <string name="remove_account">Are You Sure To Remove Account ?</string>
    <string name="textview_background_color">Background Color</string>
    <string name="vk">VK</string>
    <string name="fb">FB</string>
    <string name="vb">VB</string>
    <string name="wt">Wt</string>
    <string name="tl">TL</string>
    <string name="skp">Skp</string>
    <string name="fontSize">Font Size</string>
    <string name="backgroundColor">Background Color</string>
    <string name="fontColor">Font Color</string>
    <string name="action_contact_1">Contact 1</string>
    <string name="action_contact_2">Contact 2</string>
    <string name="action_contact_3">Contact 3</string>
    <string name="action_search_contact">Contact Search</string>
    <string name="action_search">Search</string>
    <string name="text_view_contact_search">Contact To Find</string>
    <string name="action_type_message">Type...</string>
    <string name="text_me_message_1">Hi! :)</string>
    <string name="text_friend_message_1">Hey m8! :)</string>
    <string name="text_me_message_2">What\'s new?</string>
    <string name="action_channel_1">Facebook</string>
    <string name="action_channel_2">Vkontakte</string>
    <string name="action_channel_3">Telegram</string>

</resources>
