<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.spand.meme.activity.setting.GlobalSettingsActivity">


    <Switch
        android:id="@+id/autorun_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/switch_autorun" />

    <Switch
        android:id="@+id/tips_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/switch_tips" />

    <Switch
        android:id="@+id/autoupdate_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/switch_autoupdate" />

    <Button
        android:id="@+id/change_password_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="selectChangePassword"
        android:text="@string/action_change_password" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/notification_textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/textview_notification_type" />

        <Spinner
            android:id="@+id/notification_spinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/melody_textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/textview_melody" />

        <Spinner
            android:id="@+id/melody_spinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />

    </LinearLayout>

    <Button
        android:id="@+id/reset_settings_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="selectResetSettings"
        android:text="@string/action_reset_settings" />

    <Button
        android:id="@+id/deactivate_account_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="selectDeactivateAccount"
        android:text="Button"
        tools:text="@string/action_remove_account" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/language_textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/textview_languages" />

        <Spinner
            android:id="@+id/language_spinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>
