<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.spand.meme.core.activity.settings.ChannelsSettingActivity">


    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/vk_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="selectChannelSetting"
            android:text="@string/vk" />

        <Button
            android:id="@+id/fb_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="selectChannelSetting"
            android:text="@string/fb" />

        <Button
            android:id="@+id/vb_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="selectChannelSetting"
            android:text="@string/vb" />

        <Button
            android:id="@+id/wt_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="2"
            android:onClick="selectChannelSetting"
            android:text="@string/wt" />

        <Button
            android:id="@+id/tl_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="2"
            android:onClick="selectChannelSetting"
            android:text="@string/tl" />

        <Button
            android:id="@+id/skp_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="2"
            android:onClick="selectChannelSetting"
            android:text="@string/skp" />

    </GridLayout>
</LinearLayout>